--- a/application/package.json
+++ b/application/package.json
@@ -4,18 +4,25 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "builddb": "node ./bin/dbloader",
-    "grade": "npm i && node ./bin/dbloader  && nodemon ./bin/www"
+    "builddb": "node bin/dbloader.js",
+    "grade": "npm i && node bin/dbloader.js  && nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^5.3.2",
+    "express-mysql-session": "^2.1.8",
+    "express-session": "^1.17.2",
+    "express-sessions": "^1.0.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2",
+    "npm-check-updates": "^12.5.9",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
