--- a/application/package.json
+++ b/application/package.json
@@ -21,9 +21,11 @@
     "express-sessions": "^1.0.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.2",
     "npm-check-updates": "^12.5.9",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
