--- a/application/package.json
+++ b/application/package.json
@@ -8,6 +8,7 @@
     "grade": "npm i && node bin/dbloader.js  && nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
     "cookie-parser": "~1.4.4",
